# Sebastian-forge

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  index.html  package-lock.json  package.json
docs/codebase_overview/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/custom_titlebar/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase1_ai_providers/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase2_fixes/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase2_master_password/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase2_security_review/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase3_s3_sync/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
docs/phase4_local_ai/: implementation_plan.md  shared_context.md  task_list.md  walkthrough.md
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: DemoBanner.tsx  GeneratingAnimation.tsx  MasterPasswordSetupModal.tsx  ModelSelector.tsx  MorningBriefingModal.tsx  S3ConflictModal.tsx  SessionExpiredBanner.tsx  TaskCandidatesPanel.tsx  TaskModal.tsx  TaskPeekModal.tsx  UnlockModal.tsx
src/lib/: ai.ts  db.ts  demoData.ts  demoMode.ts  queries.ts  s3sync.ts  session.ts  settings.ts  sync.ts  taskLogs.ts
src/pages/: DailyReport.tsx  Dashboard.tsx  Memo.tsx  (+4 more)
(+3 files in other folders)
